--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 	<link rel="manifest" href="/images/site.webmanifest">
 	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 
 <body class="index">
 <div class="main">
@@ -38,68 +37,99 @@
 
 
 		<div class="hero-home"><div class="middle">
-			<p>Hi!<br>My name is <strong>Luis Herrero</strong> and I'm a Product & Interaction Designer</p>
+			<div class="content">
+				<p>Hi!<br>My name is <strong>Luis Herrero</strong> and I'm a Product & Interaction Designer</p>
+				<p class="bio">With more than ten years of experience in Product Design, I have crafted several products across various mediums, covering the entire design cycle to deliver world-class, user-centered solutions.</p>
+				<p class="bio">With extensive experience in handling high-pressure situations, I have built a reputation for thriving in agile product design teams. My success is based on tight processes and effective communication.</p>
+			</div>
 		</div></div>
 
 
 
 
 
-		<div class="grid-container"><div class="middle grid-work">
+
+		<div class="grid-container"><div class="middle">
 
 
-			<div class="work-item"><a href="/qvc/">
-				<div class="frame"><span class="pic qvc"></span></div>
-				<div class="info">
-					<h4>QVC</h4>
-					<p>Product Design</p>
-				</div></a>
-			</div>
+			<h2 class="heading">Case study</h2>
 
-			<div class="work-item"><a href="/plex-media-player/">
-				<div class="frame"><span class="pic plex"></span></div>
-				<div class="info">
-					<h4>Plex Media Player</h4>
-					<p>Product Design</p>
-				</div></a>
-			</div>
 
-			<div class="work-item"><a href="/showpal/">
-				<div class="frame"><span class="pic showpal"></span></div>
-				<div class="info">
-					<h4>ShowPal</h4>
-					<p>Product Design</p>
-				</div></a>
-			</div>
+			<div class="grid-work">
 
-			<div class="work-item"><a href="/chroma-ds/">
-				<div class="frame"><span class="pic chroma"></span></div>
-				<div class="info">
-					<h4>Chroma</h4>
-					<p>Design System</p>
-				</div></a>
-			</div>
+				<div class="work-item"><a href="/qvc/">
+					<div class="frame"><span class="pic qvc"></span></div>
+					<div class="info">
+						<h4>QVC</h4>
+						<p>Product Design</p>
+					</div></a>
+				</div>
 
-			<div class="work-item"><a href="/mummies/">
-				<div class="frame"><span class="pic mummies"></span></div>
-				<div class="info">
-					<h4>Mummies</h4>
-					<p>Motion Design</p>
-				</div></a>
-			</div>
+				<div class="work-item"><a href="/plex-media-player/">
+					<div class="frame"><span class="pic plex"></span></div>
+					<div class="info">
+						<h4>Plex Media Player</h4>
+						<p>Product Design</p>
+					</div></a>
+				</div>
 
-			<div class="work-item"><a href="/future-nature/">
-				<div class="frame"><span class="pic nature"></span></div>
-				<div class="info">
-					<h4>Future Nature</h4>
-					<p>Motion Design</p>
-				</div></a>
 			</div>
 
 
 		</div></div>
 
 
+
+
+
+
+
+
+
+
+		<div class="grid-container"><div class="middle">
+
+
+			<h2 class="heading">Works</h2>
+
+
+			<div class="grid-work">
+
+				<div class="work-item"><a href="/qvc/">
+					<div class="frame"><span class="pic qvc"></span></div>
+					<div class="info">
+						<h4>QVC</h4>
+						<p>Product Design</p>
+					</div></a>
+				</div>
+
+				<div class="work-item"><a href="/plex-media-player/">
+					<div class="frame"><span class="pic plex"></span></div>
+					<div class="info">
+						<h4>Plex Media Player</h4>
+						<p>Product Design</p>
+					</div></a>
+				</div>
+
+			</div>
+
+
+		</div></div>
+
+
+
+
+		<div class="block video"><div class="middle">
+
+				<h2 class="heading">Motion Reel</h2>
+
+
+				<video controls preload="auto" poster="motion/images/poster.png">
+		        	<source src="motion/video/reel.mp4" type="video/mp4" />
+		        	<source src="motion/video/reel.ogv" type="video/ogg" />
+		       	</video>
+
+		</div></div>
 
 
 
@@ -128,4 +158,14 @@ $(document).ready(function()
 	})
 
 })
+</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VD1XKV65D7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VD1XKV65D7');
 </script>
