--- a/motion/index.html
+++ b/motion/index.html
@@ -15,7 +15,7 @@
 	<link rel="manifest" href="/images/site.webmanifest">
 	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body class="motion">
@@ -32,6 +32,27 @@
 	</div>
 </div>
  	
+
+
+		<div class="grid-container block"><div class="middle col2">
+
+			<div class="copy">
+				<h3>Motion as a language</h3>
+				<p>As a designer, I firmly believe motion can <strong>significantly enhance</strong> the visual storytelling of a digital product.</p>
+				<p>In my career,  I have had the opportunity to showcase the strength of this conviction through my involvement in several projects.</p>
+				<p>Smartly using motion, we can drive the user to a richer, improved experience that is <strong>easier to engage with</strong>, and therefore we could create an emotional bond between the user and the product.</p>
+			</div>
+
+			<div class="copy">
+				<h3>Reel</h3>
+				<p>Many of the works that I have done have a significant load of animation, from product intros, microsites, and interactive and advertising videos to artistic pieces.</p>
+				<p>These projects required various skills, including motion design, animation, interaction, visual effects, and editing.</p>
+				<p>And here you can check some motion-oriented works:</p>
+				<p><a href="/mummies/" class="button">Mummies · Motion Graphics</a></p>
+				<p><a href="/future-nature/" class="button">Future Nature · Art Exhibition</a></p>
+			</div>
+
+		</div></div>
 
 
 		<div class="block video"><div class="middle">
@@ -56,7 +77,8 @@
 
 			<div class="copy">
 				<h3>Reel</h3>
-				<p>This reel showcases some examples of my work with motion design, animation, interaction, visual effects, and editing.</p>
+				<p>Many of the works that I have done have a significant load of animation, from product intros, microsites, and interactive and advertising videos to artistic pieces.</p>
+				<p>These projects required various skills, including motion design, animation, interaction, visual effects, and editing.</p>
 				<p>And here you can check some motion-oriented works:</p>
 				<p><a href="/mummies/" class="button">Mummies · Motion Graphics</a></p>
 				<p><a href="/future-nature/" class="button">Future Nature · Art Exhibition</a></p>
@@ -95,3 +117,12 @@ $(document).ready(function()
 
 </script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VD1XKV65D7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VD1XKV65D7');
+</script>
