--- a/plex-media-player/index.html
+++ b/plex-media-player/index.html
@@ -15,7 +15,7 @@
 	<link rel="manifest" href="/images/site.webmanifest">
 	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body class="index">
@@ -164,3 +164,13 @@ $(document).ready(function()
 
 </script>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VD1XKV65D7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VD1XKV65D7');
+</script>
