--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VD1XKV65D7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VD1XKV65D7');
+</script>
 
 <body class="index">
 <div class="main">
