--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 		<div class="hero-home"><div class="middle">
-			<p>Hi!<br>My name is <strong>Luis Herrero</strong> and I'm a Product & Interaction Designer</p>
+			<p class="content">Hi!<br>My name is <strong>Luis Herrero</strong> and I'm a Product & Interaction Designer</p>
 		</div></div>
 
 
