--- a/beta/index.html
+++ b/beta/index.html
@@ -22,18 +22,20 @@
 
 
 
-<section id="intro" class="section" data-bgcolor="#CBCFD0"><div class="wrapper">
+<section id="intro" class="section bg-intro" data-bgcolor="#E0E7E8"><div class="wrapper">
 		<h1 class="logo"><a href="#">Luis Herrero</a></h1>
 		<h2><span>Hello there!</span>I'm a designer that loves to craft delightful experiences for users.</h2>
 		<div class="info">
 			<p>For more than 10 years, I've designed experiences at start-ups and scale-ups, thriving in agile design teams and fast-paced branding and advertising environments.</p>
 			<p>Having deep experience handling high-pressure situations, I have built a reputation on delivering consistent successes based on tight processes and effective communication.</p>
 		</div>
-		<div class="carousel" id="carousel">
-			<div class="device"></div>
-			<div class="app-window">
-				<div class="app-fixed"></div>
-				<div id="app-content"></div>
+		<div class="deviceContainer">
+			<div class="carousel" id="carousel">
+				<div class="device"></div>
+				<div class="app-window">
+					<div class="app-fixed"></div>
+					<div id="app-content"></div>
+				</div>
 			</div>
 		</div>
 </div></section>
@@ -46,17 +48,17 @@
 
 
 
-<section id="work" class="section" data-bgcolor="#5E6A6E"><div class="wrapper">
+<section id="work" class="section bg-work" data-bgcolor="#5E6A6E"><div class="wrapper">
 	
 	<div class="description">
 		<h2 class="title">What I do</h2>
-		<p>My work is to create experiences that harmonize user needs with the product's vision at every stage of the design process.</p>
+		<p>I create experiences that harmonize user needs with the product's vision at every stage of the design process.</p>
 		<p>From static wireframes to innovative animated prototypes, documented deliverables, and comprehensive design systems for smooth production handoff.</p>
 		<p>Always supported by extensive experience in designing for web, desktop, mobile, and TV platforms.</p>
 	</div>
 
 	<div class="work-sample">
-		<img src="images/work-sample.png" alt="QVC+ website in a laptop">
+		<img id="workSample" src="images/work-sample.png" alt="QVC+ website in a laptop">
 	</div>
 
 
@@ -88,7 +90,7 @@
 
 
 
-<section id="experience" class="section" data-bgcolor="#424A4D"><div class="wrapper">
+<section id="experience" class="section bg-experience" data-bgcolor="#6D7678"><div class="wrapper">
 
 	<div class="description">
 		<h2 class="title">Where I did it</h2>
@@ -101,7 +103,7 @@
 			<div class="details">
 				<h2>Lead Product/Motion Designer</h2>
 				<p class="date">2024</p>
-				<p class="role">I joined Tewke to help them create and define a unified visual language, focusing heavily on motion to provide a more engaging and memorable experience while reducing complexity.</p>				
+				<p class="role">I joined Tewke to help them create and define a unified visual language, focusing heavily on motion to provide a more engaging and memorable experience, reducing the complexity of the tasks.</p>				
 			</div>
 		</div>
 
@@ -110,7 +112,8 @@
 			<div class="details">
 				<h2>Senior Product Designer</h2>
 				<p class="date">2023</p>
-				<p class="role">I prototyped and designed interaction processes aligned with business requirements, using different metrics to achieve strategic customer acquisition goals while enhancing feature functionality and performance.</p>				
+				<p class="role">Working in the Profile Accounts department, I prototyped and designed multiple interaction processes aligned with the business requirements.</p>				
+				<p class="role">I used different metrics to achieve strategic customer acquisition goals while enhancing feature functionality and performance.</p>				
 			</div>
 		</div>
 
@@ -128,7 +131,8 @@
 			<div class="details">
 				<h2>Product Designer</h2>
 				<p class="date">2014</p>
-				<p class="role">I joined Plex to lead and execute the design of mobile and TV platforms, creating a unified, high-performance, and user-centric digital experience.</p>				
+				<p class="role">I joined Plex to lead and execute the design of mobile and TV platforms, creating a unified, high-performance, and user-centric digital experience.</p>
+				<p class="role">During my eight years at Plex, I had the opportunity to make a significant internal impact by improving communication channels between departments and assisting in defining the product strategy and growth to engage more users.</p>				
 			</div>
 		</div>
 
@@ -138,7 +142,7 @@
 				<h2>Visual Designer</h2>
 				<p class="date">2010</p>
 				<p class="role">I started my career as a designer, collaborating with various clients and advertising agencies to create engaging communication pieces that resonated with target audiences.</p>
-				<p class="role">During this time, I had the privilege of creating several projects that were awarded in advertising festivals.</p>				
+				<p class="role">In this time, I had the privilege of creating several projects that were awarded in advertising festivals.</p>				
 			</div>
 		</div>
 	</div>
@@ -153,7 +157,7 @@
 
 
 
-<section id="references" class="section" data-bgcolor="#61696B"><div class="wrapper">
+<section id="references" class="section bg-references" data-bgcolor="#BFC4C7"><div class="wrapper">
 
 	<div class="description">
 		<h2 class="title">Who have I worked with</h2>
@@ -163,8 +167,21 @@
 
 	<div class="colleagues">
 		<div class="referal">
-			<p>He can produce beautifully sleek designs with ease, and even when time is not on our side, he will keep his cool. He has a natural design instinct, a broad technical skillset to boast, and is the type of designer who can take a problem, and you know what he will deliver will be a first-class solution.</p>
+			<p>He can produce beautifully sleek designs with ease, and even when time is not on our side, he will keep his cool.</p>
+			<p>He has a natural design instinct, a broad technical skillset to boast, and is the type of designer who can take a problem, and you know what he will deliver will be a first-class solution.</p>
 			<h2>Gregor Matheson <span>Head of Design</span></h2>
+		</div>
+
+		<div class="referal">
+			<p>Getting to work with Luis, I quickly realized he is a true all-rounder—excelling in UX design, motion, and even building tools to improve workflows.</p>
+			<p>Beyond his skills, he is thoughtful, responsible, and deeply team-oriented, always ensuring things run smoothly. And above all, he is the best designer I’ve had the pleasure of working with.</p>
+			<h2>Sergio Padrino <span>Staff Software Engineer</span></h2>
+		</div>
+
+		<div class="referal">
+			<p>His ability to empathize with developers and collaborate smoothly makes him a key asset to any team. Luis also has an incredible eye for detail, making sure every little element is polished and consistent.</p>
+			<p>He consistently delivers solutions that are not only effective now but scalable for the future.</p>
+			<h2>Luis Recuenco <span>Software Developer</span></h2>
 		</div>
 
 		<div class="referal">
@@ -172,30 +189,29 @@
 			<h2>Gregor Matheson <span>Head of Design</span></h2>
 		</div>
 
-		<div class="referal">
-			<p>He can produce beautifully sleek designs with ease, and even when time is not on our side, he will keep his cool. He has a natural design i solution.</p>
-			<h2>Gregor Matheson <span>Head of Design</span></h2>
-		</div>
-
-		<div class="referal">
-			<p>He can produce beautifully sleek designs with ease, and even when time is not on our side, he will keep his cool. He has a natural design instinct, a broad technical skillset to boast, and is the type of designer who can take a problem, and you know what he will deliver will be a first-class solution.</p>
-			<h2>Gregor Matheson <span>Head of Design</span></h2>
-		</div>
-
-		<div class="referal">
-			<p>He can produce beautifully sleek designs with ease, and even when time is not on our side, he will keep his cool. set to boast, and is the type of designer who can take a problem, and you know what he will deliver will be a first-class solution.</p>
-			<h2>Gregor Matheson <span>Head of Design</span></h2>
-		</div>
-
-		<div class="referal">
-			<p>He can produce beautifully sleek designs with ease, and even when time is not on our side, he will keep his cool. He has a natural design instinct, a broadwill keep his cool. He has a natural design instinct, a broadwill keep his cool. He has a natural design instinct, a broad technical skillset to boast, and is the type of designer who can take a problem, and you know what he will deliver will be a first-class solution.</p>
-			<h2>Gregor Matheson <span>Head of Design</span></h2>
-		</div>
 	</div>
 
-	<div class="clients">
-		<img src="images/clients.png" alt="Mosaic with multiple client logos">
+	<div class="clientList">
+		<div><img src="images/clients/amex.png" alt="logo company" /></div>
+		<div><img src="images/clients/disney.png" alt="logo company" /></div>
+		<div><img src="images/clients/warner.png" alt="logo company" /></div>
+		<div><img src="images/clients/core.png" alt="logo company" /></div>
+		<div><img src="images/clients/canal.png" alt="logo company" /></div>
+		<div><img src="images/clients/tidal.png" alt="logo company" /></div>
+		<div><img src="images/clients/tele.png" alt="logo company" /></div>
+		<div><img src="images/clients/moto.png" alt="logo company" /></div>
+		<div><img src="images/clients/renault.png" alt="logo company" /></div>
+		<div><img src="images/clients/seat.png" alt="logo company" /></div>
+		<div><img src="images/clients/adolfo.png" alt="logo company" /></div>
+		<div><img src="images/clients/lucky.png" alt="logo company" /></div>
+		<div><img src="images/clients/ogilvy.png" alt="logo company" /></div>
+		<div><img src="images/clients/spring.png" alt="logo company" /></div>
+		<div><img src="images/clients/delvico.png" alt="logo company" /></div>
+		<div><img src="images/clients/forty.png" alt="logo company" /></div>
+		<div><img src="images/clients/valley.png" alt="logo company" /></div>
+		<div><img src="images/clients/eoi.png" alt="logo company" /></div>
 	</div>
+
 
 </div></section>
 
@@ -207,7 +223,7 @@
 
 
 
-<section id="about" class="section" data-bgcolor="#CBCFD0"><div class="wrapper">
+<section id="about" class="section bg-about" data-bgcolor="#CBCFD0"><div class="wrapper">
 
 	<div class="description">
 		<h2 class="title">About me</h2>
@@ -268,32 +284,32 @@ const device = document.getElementById('carousel');
 const deviceInitialPosition = device.style.bottom;
 
 const deviceContent = document.getElementById('app-content');
+const workSample = document.getElementById('workSample');
 
 var scrollPage;
 var fundido;
+
 
 
 document.addEventListener("scroll", (event) => {
   	
   	scrollPage = window.pageYOffset;
 
-  	device.style.bottom = ((scrollPage*0.4)-240)+"px";
+  	device.style.bottom = ((scrollPage*0.4)-400)+"px";
 	deviceContent.style.marginTop = -(scrollPage/2.5)+"px";
+	workSample.style.left = -15+(scrollPage/80)+"%";
 
 });
-/*
-gsap.to("[data-speed]", {
-  y: (i, el) => (1 - parseFloat(el.getAttribute("data-speed"))) * 
-  ScrollTrigger.maxScroll(window),
-  ease: "none",
-  scrollTrigger: {
-    start: 0,
-    end: "max",
-    invalidateOnRefresh: true,
-    scrub: 0
-  }
-});
-*/
+
+document.getElementById("intro").classList.remove("bg-intro")
+document.getElementById("work").classList.remove("bg-work")
+document.getElementById("experience").classList.remove("bg-experience")
+document.getElementById("references").classList.remove("bg-references")
+document.getElementById("about").classList.remove("bg-about")
+
+
+
+
 </script>
 
 </body>
