--- a/beta/index.html
+++ b/beta/index.html
@@ -11,7 +11,6 @@
 	<link rel="shortlink" href="http://luisherrero.es/">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
 
 
@@ -58,7 +57,7 @@
 		<div class="introduction">
 			<h2>Hi, my name is Luis Herrero</h2>
 			<p>I'm a <span class="carousel">product</span> designer who loves to craft delightful experiences for users.</p>
-			<p>For over 10 years, I've designed experiences at startups and scale-ups in various industries, thriving in agile design teams that build <span class="hilite">user-centric</span> solutions.</p>
+			<p>For over 10 years, I've designed experiences at startups and scale-ups in various industries, thriving in agile design teams that build user-centric solutions.</p>
 		</div>
 
 </div></section>
@@ -79,17 +78,17 @@
 <section id="works">
 
 	<div id="qvc"><div class="wrapper">
-		<div class="link"><h3>QVC+ Streaming website</h3><a href="qvc/index.html">More info</a></div>
+		<div class="link"><h3>QVC+ Streaming website</h3><a href="/qvc/">More info</a></div>
 	</div></div>
 
 
 	<div id="plex"><div class="wrapper">
-		<div class="link"><h3>PLEX · Modern layout</h3><a href="plex/index.html">More info</a></div>
+		<div class="link"><h3>PLEX · Modern layout</h3><a href="/plex/">More info</a></div>
 	</div></div>
 
 
 	<div id="showpal"><div class="wrapper">
-		<div class="link"><h3>Showpal</h3><a href="showpal/index.html">More info</a></div>
+		<div class="link"><h3>Showpal</h3><a href="/showpal/">More info</a></div>
 	</div></div>
 
 
@@ -112,7 +111,7 @@
 
 	<div class="job">
 		<div class="header">
-			<h3 class="logo logo-adevinta">Adevinta</h3>
+			<h3 class="logo logo-adevinta"><a href="https://adevinta.com/" target="company">Adevinta</a></h3>
 			<p class="role">Product Consultant</p>
 			<p class="year">2025</p>
 		</div>
@@ -122,7 +121,7 @@
 
 	<div class="job">
 		<div class="header">
-			<h3 class="logo logo-tewke">Tewke</h3>
+			<h3 class="logo logo-tewke"><a href="https://tewke.com/" target="company">Tewke</a></h3>
 			<p class="role">Lead Product / Motion Designer</p>
 			<p class="year">2024</p>
 		</div>
@@ -131,7 +130,7 @@
 
 	<div class="job">
 		<div class="header">
-			<h3 class="logo logo-mews">MEWS</h3>
+			<h3 class="logo logo-mews"><a href="https://mews.com/" target="company">MEWS</a></h3>
 			<p class="role">Senior Product Designer</p>
 			<p class="year">2023</p>
 		</div>
@@ -141,7 +140,7 @@
 
 	<div class="job">
 		<div class="header">
-			<h3 class="logo logo-axonista">Axonista</h3>
+			<h3 class="logo logo-axonista"><a href="https://axonista.com/" target="company">Axonista</a></h3>
 			<p class="role">Lead Product Designer</p>
 			<p class="year">2022</p>
 		</div>
@@ -151,7 +150,7 @@
 
 	<div class="job">
 		<div class="header">
-			<h3 class="logo logo-plex">PLEX</h3>
+			<h3 class="logo logo-plex"><a href="https://www.plex.tv/" target="company">PLEX</a></h3>
 			<p class="role">Product Designer</p>
 			<p class="year">2014 - 2022</p>
 		</div>
@@ -243,7 +242,7 @@ Worked closely with product and executive teams to help define the strategy to t
 		<ul class="otherWorks">
 			<li><a href="https://www.imdb.com/title/tt23177868/" target="_blank">Mummies · Motion graphics</a></li>
 			<li><a href="https://www.rivavelarde.com/future-nature" target="_blank">Future Nature · Art exhibition</a></li>
-			<li><a href="https://karabast.net/" target="_blank">Karabast · Online SWU simulator</a></li>
+			<li><a href="https://karabast.net/" target="_blank">Karabast · SWU simulator</a></li>
 		</ul>
 
 	</div>
@@ -395,7 +394,6 @@ function checkMobile() {
 
 
 </script>
-
 
 
 
