--- a/beta/index.html
+++ b/beta/index.html
@@ -78,17 +78,17 @@
 <section id="works">
 
 	<div id="qvc"><div class="wrapper">
-		<div class="link"><h3>QVC+ Streaming website</h3><a href="/qvc/">More info</a></div>
+		<div class="link"><h3>QVC+ Streaming website</h3><a href="/beta/qvc/">More info</a></div>
 	</div></div>
 
 
 	<div id="plex"><div class="wrapper">
-		<div class="link"><h3>PLEX · Modern layout</h3><a href="/plex/">More info</a></div>
+		<div class="link"><h3>PLEX · Modern layout</h3><a href="/beta/plex/">More info</a></div>
 	</div></div>
 
 
 	<div id="showpal"><div class="wrapper">
-		<div class="link"><h3>Showpal</h3><a href="/showpal/">More info</a></div>
+		<div class="link"><h3>Showpal</h3><a href="/beta/showpal/">More info</a></div>
 	</div></div>
 
 
