--- a/showpal/index.html
+++ b/showpal/index.html
@@ -72,7 +72,7 @@
 
 		<div class="job">
 			<div class="header">
-				<p class="role">The Cshallenge</p>
+				<p class="role">The Challenge</p>
 			</div>
 			<p class="description">What began in 2013 as iShows set out to solve a simple pain point: keeping a personal log of watched TV shows and upcoming episodes in a way that felt as engaging as binge-watching itself.</p>
 			<p class="description">Early tracking apps were functional but lacked personality. Our goals were to:</p>
