--- a/qvc/index.html
+++ b/qvc/index.html
@@ -27,7 +27,7 @@
 
 <div class="sidebar">
 
-	<h1 class="logo">Luis Herrero</h1>
+	<h1 class="logo"><a href="/">Luis Herrero</a></h1>
 
 	<nav class="menu">
 		<div class="indicator"></div>
