--- a/plex/index.html
+++ b/plex/index.html
@@ -171,10 +171,10 @@
 			</div>
 			<p class="description"><strong>Aligning with Standards</strong><br>Navigation is easier and follows a standardized pattern commonly used in many apps today, which minimizes the user's learning curve.</p>
 
-			<p class="description"><strong>Immersive, Adaptive Backgrounds</strong><br>NBy extracting dominant colors from artwork, the UI transitions as users navigate, heightening immersion without manual theming.</p>
+			<p class="description"><strong>Immersive, Adaptive Backgrounds</strong><br>By extracting dominant colors from artwork, the UI transitions as users navigate, heightening immersion without manual theming.</p>
 
 			<p class="description">Three granular settings allow each user to craft their own layout—from high-contrast, metadata-light layouts to fully immersive, art-driven experiences.</p>
-			<p class="description">With all this work done, we had a solid foundation for Themes!</p>
+			<p class="description">With all this work done, we had a solid foundation for future theming options!</p>
 		</div>
 
 
