--- a/plex/index.html
+++ b/plex/index.html
@@ -165,7 +165,7 @@
 	
 
 
-		<div class="job">
+		<div class="job"><div class="destacado">
 			<div class="header">
 				<p class="role">Results</p>
 			</div>
@@ -175,18 +175,16 @@
 
 			<p class="description">Three granular settings allow each user to craft their own layout—from high-contrast, metadata-light layouts to fully immersive, art-driven experiences.</p>
 			<p class="description">With all this work done, we had a solid foundation for future theming options!</p>
-		</div>
 
+			<div class="spacer"></div>
 
-
-		<div class="job">
 			<div class="header">
 				<p class="role">key takeaways</p>
 			</div>
 			<p class="description"><strong>User-Driven Design Wins:</strong><br>By gathering early and frequent feedback from involved community members, we ensured that the development of the feature matched real user needs.</p>
 			<p class="description"><strong>Configurable Defaults Preserve Choice:</strong><br>Offering multiple, independently adjustable settings respects diverse viewing habits and device capabilities.</p>
 			<p class="description"><strong>Iterative Feature-Flag Rollouts Mitigate Risk:</strong><br>Implementing phased deployments through experimental features enables rapid iteration while maintaining overall stability.</p>
-		</div>
+		</div></div>
 
 </div></section>
 
