--- a/qvc/index.html
+++ b/qvc/index.html
@@ -171,24 +171,20 @@
 	
 
 
-		<div class="job">
+		<div class="job"><div class="destacado">
 			<div class="header">
 				<p class="role">Results</p>
 			</div>
 			<p class="description">In terms of site engagement, 73% of visits come directly, with organic search driving another 9%, indicating a loyal returning user base alongside discoverability of specific streams and products.</p>
 			<p class="description">The average session time is 5 minutes with 22.1 million monthly visits (including QVC.com), suggesting that streaming content—primarily QVC+ live and on-demand videos—plays a key role in keeping users on site longer, despite seasonal fluctuations in overall traffic.</p>
-		</div>
-
-
-
-		<div class="job">
+			<div class="spacer"></div>
 			<div class="header">
 				<p class="role">key takeaways</p>
 			</div>
 			<p class="description"><strong>Complementary Traffic Growth:</strong><br>Despite seasonal dips, qvc.com sustains ~20–22 million monthly visits, showing that streaming adds to  existing shopping activity.</p>
 			<p class="description"><strong>Extended Session Durations:</strong><br>Average sessions of 5–9 minutes far exceed typical e-commerce benchmarks, confirming QVC+’s stickiness.</p>
 			<p class="description"><strong>Competitive Advantage:</strong><br>By integrating live video and on-demand streams, QVC+ helps qvc.com outpace competitors in engagement and likely in conversion rates for live-shopping events.</p>
-		</div>
+		</div></div>
 
 </div></section>
 
