--- a/showpal/index.html
+++ b/showpal/index.html
@@ -161,24 +161,22 @@
 	
 
 
-		<div class="job">
+		<div class="job"><div class="destacado">
 			<div class="header">
 				<p class="role">Results</p>
 			</div>
 			<p class="description"><strong>Over 420 K Downloads & 6 K Monthly Active Users</strong><br>Users praised the app's unique combination of aesthetics and functionality as the reason they continue to use it.</p>
 			<p class="description"><strong>Press coverage</strong><br>Renowned outlets praised the app for its simplicity and innovative design. AppAdvice referred to it as "the TV tracker you've been waiting for," while MacStories commended its gesture-driven discovery experience and clean UI.</p>
-		</div>
 
+			<div class="spacer"></div>
 
-
-		<div class="job">
 			<div class="header">
 				<p class="role">key takeaways</p>
 			</div>
 			<p class="description"><strong>Personalization Equals Retention</strong><br>Advanced theming and layout controls transform a utility app into a personal companion, enhancing long-term user engagement.</p>
 			<p class="description"><strong>Gesture-First Design Fuels Delight</strong><br>ACarefully chosen gesture interactions can make everyday tasks quicker and more enjoyable, reducing friction in the process.</p>
 			<p class="description"><strong>Community Involvement Drives Innovation</strong><br>Public betas and forums not only reveal new ideas but also foster advocates who promote your product.</p>
-		</div>
+		</div></div>
 
 
 		<img src="showpal4.png" class="banner" alt="">
