Tweaks and clients content

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
 		<div class="introduction">
 			<h2>Hi, my name is Luis Herrero</h2>
-			<p>I'm a <span class="carousel"><span class="sub"></span><span class="roleText">product</span></span> designer who loves to craft delightful experiences for users.</p>
-			<p>For over 10 years, I've designed experiences at startups and scale-ups in various industries, thriving in agile design teams that build user-centric solutions.</p>
+			<p>I'm <span class="carousel"><span class="sub"></span><span class="roleText">a product</span></span> designer who loves to craft delightful experiences for users.</p>
+			<p>For over ten years, I've designed experiences at startups and scale-ups in various industries, thriving in agile design teams that build user-centric solutions.</p>
 		</div>
 
 </div></section>
@@ -141,7 +141,7 @@
 			<p class="year">2023</p>
 		</div>
 		<p class="description">Working in the Profile Accounts department, I prototyped and designed multiple interaction processes aligned with the business requirements, contributing directly to achieving the year's growth objectives.</p>
-		<p class="description">Created fromwireframes to high-fidelity designs for new features and improvements, ensuring design consistency and coherence across the entire product, using different metrics to achieve customer acquisition goals.</p>
+		<p class="description">Created from wireframes to high-fidelity designs for new features and improvements, ensuring design consistency and coherence across the entire product, using different metrics to achieve customer acquisition goals.</p>
 	</div>
 
 	<div class="job">
@@ -160,9 +160,19 @@
 			<p class="role">Product Designer</p>
 			<p class="year">2014 - 2022</p>
 		</div>
-		<p class="description">I joined Plex to lead and execute the design of mobile and TV platforms, creating a unified, high-performance, user-centric digital experience.
-Worked closely with product and executive teams to help define the strategy to translate concepts and ideas into features within optimized and communicative design workflows</p>
+		<p class="description">I joined Plex to lead and execute the design of mobile and TV platforms, creating a unified, high-performance, user-centric digital experience.</p>
+		<p class="description">Worked closely with product and executive teams to help define the strategy to translate concepts and ideas into features within optimized and communicative design workflows</p>
 		<p class="description">In close collaboration with developers, we create Chroma, Plex’s Design System, to optimize the design workflow and produce a coherent user experience across multiple platforms and devices.</p>
+	</div>
+
+	<div class="job">
+		<div class="header">
+			<p class="role">Visual Designer</p>
+			<p class="year"><span>PRIOR</span> 2014</p>
+		</div>
+		<p class="description">Started my career as a designer, collaborating with various clients and advertising agencies to create engaging communication pieces.</p>
+		<p class="description">During this time, I had the privilege of creating several projects for the most renowned brand across the globe.</p>
+		<img src="images/client_logos.png" alt="Mosaic of brands and clients" class="clients">
 	</div>
 
 
@@ -231,7 +241,7 @@ Worked closely with product and executive teams to help define the strategy to t
 <section id="about"><div class="wrapper">
 		
 	<div class="content">
-		<p>Throughout my more than 15-year career, I have pushed myself to expand my skillset and become an even more impactful individual contributor and design leader.</p>
+		<p>Throughout my more than fifteen-year career, I have pushed myself to expand my skillset and become an even more impactful individual contributor and design leader.</p>
 		<p>I pride myself on my dedication to mentorship and collaboration. I have fine-tuned my design workflow to deliver effective and impactful results, and shared this knowledge in various educational institutions.</p>
 		<p>I also enjoy working on artistic projects that enhance visual narratives across different mediums, including motion pictures and art exhibitions.</p>
 	</div>
@@ -306,7 +316,7 @@ var pagePosY;
 var currentIndex = 0;
 var scrollingNow = false;
 var rolesIndex = 0;
-var roles = ["product", "motion", "interaction"];
+var roles = ["a product", "a motion", "an interaction"];
 var sections = ['#intro','#works','#experience','#referrals','#about'];
 var $carrusel;
 var $subrayado;
