--- a/qvc/index.html
+++ b/qvc/index.html
@@ -181,7 +181,7 @@
 			<div class="header">
 				<p class="role">key takeaways</p>
 			</div>
-			<p class="description"><strong>Complementary Traffic Growth:</strong><br>Despite seasonal dips, qvc.com sustains ~20–22 million monthly visits, showing that streaming adds to  existing shopping activity.</p>
+			<p class="description"><strong>Complementary Traffic Growth:</strong><br>Despite seasonal dips, qvc.com sustains around 22 million monthly visits, showing that streaming adds to  existing shopping activity.</p>
 			<p class="description"><strong>Extended Session Durations:</strong><br>Average sessions of 5–9 minutes far exceed typical e-commerce benchmarks, confirming QVC+’s stickiness.</p>
 			<p class="description"><strong>Competitive Advantage:</strong><br>By integrating live video and on-demand streams, QVC+ helps qvc.com outpace competitors in engagement and likely in conversion rates for live-shopping events.</p>
 		</div></div>
