--- a/showpal/index.html
+++ b/showpal/index.html
@@ -143,7 +143,7 @@
 			<div class="header">
 				<p class="role">Community-Driven Refinement</p>
 			</div>
-			<p class="description">The release brought dozens of real-world use cases and feature requests. A maintained public forum enabled power users to propose language translations, advanced sorting options, and region-specific tweaks—leading to support for 15+ languages and region-tailored UI adjustments.</p>
+			<p class="description">The release brought dozens of real-world use cases and feature requests. A maintained public forum enabled power users to propose language translations, advanced sorting options, and region specific tweaks, leading to support for 15+ languages and improved UI adjustments.</p>
 		</div>
 
 </div></section>
@@ -166,7 +166,7 @@
 				<p class="role">Results</p>
 			</div>
 			<p class="description"><strong>Over 420 K Downloads & 6 K Monthly Active Users</strong><br>Users praised the app's unique combination of aesthetics and functionality as the reason they continue to use it.</p>
-			<p class="description"><strong>Press coverage</strong><br>Renowned outlets praised the app for its simplicity and innovative design. AppAdvice referred to it as "the TV tracker you've been waiting for," while MacStories commended its gesture-driven discovery experience and clean UI.</p>
+			<p class="description"><strong>Press coverage</strong><br>Renowned outlets praised the app for its simplicity and innovative design. AppAdvice referred to it as <i>"the TV tracker you've been waiting for"</i>, while MacStories commended its gesture-driven discovery experience and clean UI.</p>
 
 			<div class="spacer"></div>
 
